versioned_docs/version-23.2/reference/rpk/rpk-redpanda/rpk-redpanda-start.mdx
---
title: rpk redpanda start
rpk_version: (rev )
---

<head>
  <meta name="title" content="rpk redpanda start | Redpanda Docs" />
  <meta name="description" content="rpk redpanda start" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-start/" />
</head>

Start Redpanda. 

### Setting up a mode

It's possible to setup a mode for redpanda to start. Currently we support the mode `dev-container`.

To set up the mode `dev-container` run:

```
rpk redpanda start --mode dev-container
```

Mode uses well-known configuration properties for development or tests 
environments:

Bundled flags:
  * `--overprovisioned`
  * `--reserve-memory 0M`
  * `--check=false`
  * `--unsafe-bypass-fsync`
  
Bundled cluster properties:
  * `auto_create_topics_enabled: true`
  * `group_topic_partitions: 3`
  * `storage_min_free_bytes: 10485760 (10MiB)`
  * `topic_partitions_per_shard: 1000`
  * `fetch_reads_debounce_timeout: 10`

After redpanda starts you can modify the cluster properties using:

```
rpk config set <key> <value>
```

## Usage

```bash
rpk redpanda start [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--advertise-kafka-addr</td>
      <td>strings</td>
      <td>
        A comma-separated list of Kafka addresses to advertise
        (scheme://host:port|name).
      </td>
    </tr>
    <tr>
      <td>--advertise-pandaproxy-addr</td>
      <td>strings</td>
      <td>
        A comma-separated list of Pandaproxy addresses to advertise
        (scheme://host:port|name).
      </td>
    </tr>
    <tr>
      <td>--advertise-rpc-addr</td>
      <td>string</td>
      <td>The advertised RPC address (host:port).</td>
    </tr>
    <tr>
      <td>--check</td>
      <td>-</td>
      <td>
        When set to false will disable system checking before starting redpanda
        (default true).
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for start.</td>
    </tr>
    <tr>
      <td>--install-dir</td>
      <td>string</td>
      <td>Directory where redpanda has been installed.</td>
    </tr>
    <tr>
      <td>--kafka-addr</td>
      <td>strings</td>
      <td>
        A comma-separated list of Kafka listener addresses to bind to
        (scheme://host:port|name).
      </td>
    </tr>
    <tr>
      <td>--mode</td>
      <td>string</td>
      <td>
        Mode sets well-known configuration properties for development or test
        environments; use --mode help for more info.
      </td>
    </tr>
    <tr>
      <td>--pandaproxy-addr</td>
      <td>strings</td>
      <td>
        A comma-separated list of Pandaproxy listener addresses to bind to
        (scheme://host:port|name).
      </td>
    </tr>
    <tr>
      <td>--rpc-addr</td>
      <td>string</td>
      <td>The RPC address to bind to (host:port).</td>
    </tr>
    <tr>
      <td>--schema-registry-addr</td>
      <td>strings</td>
      <td>
        A comma-separated list of Schema Registry listener addresses to bind to
        (scheme://host:port|name).
      </td>
    </tr>
    <tr>
      <td>-s, --seeds</td>
      <td>strings</td>
      <td>
        A comma-separated list of seed nodes to connect to
        (scheme://host:port|name).
      </td>
    </tr>
    <tr>
      <td>--timeout</td>
      <td>duration</td>
      <td>
        The maximum time to wait for the checks and tune processes to complete.
        The value passed is a sequence of decimal numbers, each with optional
        fraction and a unit suffix, such as <code>300ms</code>,{" "}
        <code>1.5s</code> or <code>2h45m</code>. Valid time units are{" "}
        <code>ns</code>, <code>us</code> (or <code>µs</code>), <code>ms</code>,{" "}
        <code>s</code>, <code>m</code>, <code>h</code> (default 10s).
      </td>
    </tr>
    <tr>
      <td>--tune</td>
      <td>-</td>
      <td>When present will enable tuning before starting Redpanda.</td>
    </tr>
    <tr>
      <td>--well-known-io</td>
      <td>string</td>
      <td>
        The cloud vendor and VM type, in the format |vendor|:|vm type|:|storage
        type|.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda or rpk config file; default search paths are
        ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.
      </td>
    </tr>
    <tr>
      <td>-X, --config-opt</td>
      <td>stringArray</td>
      <td>
        Override rpk configuration settings; '-X help' for detail or '-X list'
        for terser detail.
      </td>
    </tr>
    <tr>
      <td>--profile</td>
      <td>string</td>
      <td>rpk profile to use.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging.</td>
    </tr>
  </tbody>
</table>
